Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARD.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef unsigned long * LPULONG;
typedef unsigned long long ULONGLONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef void * HCARD;
typedef int HCARD;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
BTICardAPI ERRVAL __stdcall BTICard_DspBioClear(HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_DspBioRd(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_DspBioSet(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_DspIntfClear(USHORT intmask,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_DspIntfRd(USHORT intmask,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_DspIntmClear(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_DspIntmSet(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_DspXfClear(HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_DspXfRd(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_DspXfSet(HCORE handleval);
BTICardAPI LPCSTR __stdcall BTICard_ErrDesc(ERRVAL errval,HCARD handleval);
BTICardAPI LPCSTR __stdcall BTICard_ErrDescStr(ERRVAL errval,HCORE handleval);
BTICardAPI LPCSTR __stdcall BTICard_ErrName(ERRVAL errval,HCARD handleval);
BTICardAPI ERRVAL __stdcall BTICard_EventLogClear(HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_EventLogConfig(USHORT configval,USHORT count,HCORE handleval);
BTICardAPI ULONG __stdcall BTICard_EventLogRd(LPUSHORT typeval,LPULONG infoval,LPINT channel,HCORE handleval);
BTICardAPI INT __stdcall BTICard_EventLogStatus(HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ExpandMant(LPULONG mant,LPINT exp);
BTICardAPI BOOL __stdcall BTICard_ExtDinRd(HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ExtDinWr(BOOL dinval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ExtDIODirSet(INT dionum,BOOL dirval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ExtDIOEnWr(INT dionum,BOOL dioval,BOOL dioen,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_ExtDIOMonConfig(USHORT rise_edge,USHORT fall_edge,INT banknum,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_ExtDIORd(INT dionum,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ExtDIOWr(INT dionum,BOOL dioval,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_ExtLEDRd(HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ExtLEDWr(BOOL ledval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ExtStatusLEDRd(LPINT ledon,LPINT ledcolor,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_ExtStatusLEDWr(BOOL ledon,BOOL ledcolor,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_FileClose(LPVOID handle);
BTICardAPI BOOL __stdcall BTICard_FileErr(VOID);
BTICardAPI VOID __stdcall BTICard_FileErrClr(VOID);
BTICardAPI VOID __stdcall BTICard_FileErrSet(VOID);
BTICardAPI LPVOID __stdcall BTICard_FileOpenRead(LPCSTR filename);
BTICardAPI LPVOID __stdcall BTICard_FileOpenWrite(LPCSTR filename);
BTICardAPI BOOL __stdcall BTICard_FileRead(LPVOID handle,LPVOID buffer,USHORT count);
BTICardAPI BOOL __stdcall BTICard_FileSeek(LPVOID handle,ULONG offset);
BTICardAPI ULONG __stdcall BTICard_FileTell(LPVOID handle);
BTICardAPI BOOL __stdcall BTICard_FileWrite(LPVOID handle,LPVOID buffer,USHORT count);
BTICardAPI USHORT __stdcall BTICard_GetHigh(ULONG val);
BTICardAPI ULONG __stdcall BTICard_GetHighL(ULONGLONG val);
BTICardAPI USHORT __stdcall BTICard_GetLow(ULONG val);
BTICardAPI ULONG __stdcall BTICard_GetLowL(ULONGLONG val);
BTICardAPI USHORT __stdcall BTICard_GlobalRdW(USHORT addrval,HCORE handleval);
BTICardAPI VOID __stdcall BTICard_GlobalWrW(USHORT value,USHORT addrval,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_HandleInfo(LPSTR cardstr,LPINT cardnum,LPULONG sizval,LPVOID *vxdptr,HCORE handleval);
BTICardAPI ERRVAL __stdcall BTICard_HandleInfoEx(LPULONG valueptr,ULONG type,HCORE handleval);
BTICardAPI BOOL __stdcall BTICard_HandleIsCard(HCARD handleval);
BTICardAPI BOOL __stdcall BTICard_HandleIsCore(HCORE handleval);