Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDNET.CS

            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DspBioClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DspBioClear(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DspBioRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DspBioRd(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DspBioSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DspBioSet(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DspIntfClear@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DspIntfClear(UInt16 intmask, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DspIntfRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DspIntfRd(UInt16 intmask, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DspIntmClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DspIntmClear(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DspIntmSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DspIntmSet(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DspXfClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DspXfClear(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DspXfRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DspXfRd(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_DspXfSet@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_DspXfSet(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ErrDesc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr _BTICard_ErrDesc(Int32 errval, IntPtr handleval);
            public static string BTICard_ErrDesc(Int32 errval, IntPtr handleval) { return Marshal.PtrToStringAnsi(_BTICard_ErrDesc(errval, handleval)); }
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ErrDescStr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr _BTICard_ErrDescStr(Int32 errval, IntPtr handleval);
            public static string BTICard_ErrDescStr(Int32 errval, IntPtr handleval) { return Marshal.PtrToStringAnsi(_BTICard_ErrDescStr(errval, handleval)); }
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ErrName@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr _BTICard_ErrName(Int32 errval, IntPtr handleval);
            public static string BTICard_ErrName(Int32 errval, IntPtr handleval) { return Marshal.PtrToStringAnsi(_BTICard_ErrName(errval, handleval)); }
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_EventLogClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_EventLogClear(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_EventLogConfig@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_EventLogConfig(UInt16 configval, UInt16 count, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_EventLogRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_EventLogRd(ref UInt16 typevalval, ref UInt32 infoval, ref Int32 channel, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_EventLogStatus@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_EventLogStatus(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExpandMant@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ExpandMant(ref UInt32 mant, ref Int32 exp);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExtDinRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_ExtDinRd(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExtDinWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ExtDinWr(Int32 dinval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExtDIODirSet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ExtDIODirSet(Int32 dionum, Int32 dirval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExtDIOEnWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ExtDIOEnWr(Int32 dionum, Int32 dioval, Int32 dioen, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExtDIOMonConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_ExtDIOMonConfig(UInt16 rise_edge, UInt16 fall_edge, Int32 banknum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExtDIORd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_ExtDIORd(Int32 dionum, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExtDIOWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ExtDIOWr(Int32 dionum, Int32 dioval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExtLEDRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_ExtLEDRd(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExtLEDWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ExtLEDWr(Int32 ledval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExtStatusLEDRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ExtStatusLEDRd(ref Int32 ledon, ref Int32 ledcolor, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_ExtStatusLEDWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_ExtStatusLEDWr(Int32 ledon, Int32 ledcolor, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_FileClose@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_FileClose(IntPtr handle);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_FileErr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_FileErr();
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_FileErrClr@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_FileErrClr();
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_FileErrSet@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_FileErrSet();
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_FileOpenRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr BTICard_FileOpenRead(ref string filename);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_FileOpenWrite@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern IntPtr BTICard_FileOpenWrite(ref string filename);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_FileRead@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_FileRead(IntPtr handle, IntPtr buffer, UInt16 count);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_FileSeek@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_FileSeek(IntPtr handle, UInt32 offset);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_FileTell@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_FileTell(IntPtr handle);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_FileWrite@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_FileWrite(IntPtr handle, IntPtr buffer, UInt16 count);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_GetHigh@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_GetHigh(UInt32 val);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_GetHighL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_GetHighL(UInt64 val);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_GetLow@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_GetLow(UInt32 val);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_GetLowL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTICard_GetLowL(UInt64 val);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_GlobalRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTICard_GlobalRdW(UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_GlobalWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTICard_GlobalWrW(UInt16 value, UInt16 addrval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HandleInfo@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            unsafe public static extern Int32 BTICard_HandleInfo(ref string cardstr, ref Int32 cardnum, ref UInt32 sizval, IntPtr* vxdptr, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HandleInfoEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_HandleInfoEx(ref UInt32 valueptr, UInt32 typeval, IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HandleIsCard@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_HandleIsCard(IntPtr handleval);
            [DllImport("BTICARD.DLL", EntryPoint = "_BTICard_HandleIsCore@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTICard_HandleIsCore(IntPtr handleval);
